<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="asCreateShoeViewModel"
            type="paolo.udacity.color.my.shoestoreinventorycapstone_1.features.main.view.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_shoe"
            android:layout_width="@dimen/d_logo_dimen"
            android:layout_height="@dimen/d_logo_dimen"
            android:layout_margin="@dimen/d_1.5_margin"
            android:contentDescription="@string/iv_shoe_content_description"
            android:src="@drawable/capstone_1_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_shoe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_1_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_shoe"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_shoe_name_hint"
                android:inputType="textEmailAddress"
                android:text="@={asCreateShoeViewModel.newShoe.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_shoe_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_1_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_shoe_name"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_shoe_company_hint"
                android:inputType="textEmailAddress"
                android:text="@={asCreateShoeViewModel.newShoe.company}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_1_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_shoe_company"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_shoe_size_hint"
                android:inputType="numberDecimal"
                android:text="@={asCreateShoeViewModel.newShoe.sizeAsString}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_shoe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_1_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_shoe_size"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_shoe_description_hint"
                android:inputType="textEmailAddress"
                android:text="@={asCreateShoeViewModel.newShoe.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_cancel_shoe_creation"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_3_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:background="@drawable/rounded_complementary_background"
            android:elevation="@dimen/e_default"
            android:gravity="center"
            android:onClick="@{_ -> asCreateShoeViewModel.cancelShoeCreation()}"
            android:paddingTop="@dimen/p_2_padding"
            android:paddingBottom="@dimen/p_2_padding"
            android:text="@string/b_cancel_shoe_creation_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/b_create_shoe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_shoe_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_create_shoe"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_3_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:background="@drawable/rounded_primary_background"
            android:elevation="@dimen/e_default"
            android:gravity="center"
            android:onClick="@{_ -> asCreateShoeViewModel.createShoe()}"
            android:paddingTop="@dimen/p_2_padding"
            android:paddingBottom="@dimen/p_2_padding"
            android:text="@string/b_create_shoe_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_cancel_shoe_creation"
            app:layout_constraintTop_toBottomOf="@+id/tl_shoe_description" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/g_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="iv_shoe, tl_shoe_name, tl_shoe_company, tl_shoe_size, tl_shoe_description, b_cancel_shoe_creation, b_create_shoe" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/shoe_relax_loader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>