<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="asLoginViewModel"
            type="paolo.udacity.color.my.shoestoreinventorycapstone_1.features.main.view.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_shoe_store_logo"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="@dimen/d_dynamic"
            android:layout_margin="@dimen/d_4_margin"
            android:contentDescription="@string/iv_shoe_store_logo_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/capstone_1_logo"
            app:layout_constraintBottom_toTopOf="@id/tl_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_1_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tl_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_hint_email"
                android:inputType="textEmailAddress"
                android:text="@={asLoginViewModel.user.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_1_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/g_50_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={asLoginViewModel.user.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_email_login"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_4_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            android:background="@drawable/rounded_primary_background"
            android:elevation="@dimen/e_default"
            android:gravity="center"
            android:onClick="@{_ -> asLoginViewModel.login()}"
            android:paddingTop="@dimen/p_2_padding"
            android:paddingBottom="@dimen/p_2_padding"
            android:text="@string/b_text_login_with_email"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_create_account"
            android:layout_width="@dimen/d_dynamic"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_2_margin"
            android:layout_marginTop="@dimen/d_4_margin"
            android:layout_marginEnd="@dimen/d_2_margin"
            android:layout_marginBottom="@dimen/d_2_margin"
            android:background="@drawable/rounded_primary_background"
            android:elevation="@dimen/e_default"
            android:gravity="center"
            android:onClick="@{_ -> asLoginViewModel.createAccount()}"
            android:paddingTop="@dimen/p_2_padding"
            android:paddingBottom="@dimen/p_2_padding"
            android:text="@string/b_text_create_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/b_email_login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_50_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/g_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="iv_shoe_store_logo, tl_email, tl_password, b_email_login, b_create_account" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/shoe_relax_loader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>