<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="paolo.udacity.color.my.shoestoreinventorycapstone_1.features.authentication.login.view.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tl_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_hint_email"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.user.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/g_50_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={loginViewModel.user.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:onClick="@{_ -> loginViewModel.login()}"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/b_text_login_with_email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:onClick="@{_ -> loginViewModel.createAccount()}"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/b_text_create_account"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/b_email_login" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/g_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tl_email, tl_password, b_email_login, b_create_account" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g_50_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/shoe_relax_loader" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>